Bug 857555.  Make window.content return an existing named frame with that name if there is one.  r=bholley